# wormhole-simulator

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  environment.yml  index.html  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
core/: __init__.py  backend.py  compat.py  metrics.py  modified_gravity.py  semiclassical.py  stress_energy.py  symmetries.py  thinshell.py
docs/: architecture.md  deliverables.md  index.md  mathematical_foundations.md  numerical_methods.md  related_work.md  visualization.md
examples/: run_advanced.py  run_demos.py
numerics/: __init__.py  et_bridge.py  geodesic.py  orbits.py  pde_solver.py  qnm.py  spectral.py
tests/: test_advanced.py  test_energy_conditions.py  test_geodesic.py  test_metrics.py
visualization/: __init__.py  blender_render.py  embed.py  lensing_image.py  penrose.py  raytrace.py
web/: app.py  embedding3d.html  index.html  realtime.html
